--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "normalize.css": "^3.0.3",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-mixin": "^3.0.5",
     "reactfire": "^1.0.0",
     "underscore": "^1.8.3"
   }
